update paling baru

--- a/Frontend/src/app/pages/dashboard.component.html
+++ b/Frontend/src/app/pages/dashboard.component.html
@@ -1,12 +1,4 @@
-* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced.  * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
+<h1>dashboard</h1>
 <style>
   * { margin: 0; padding: 0; box-sizing: border-box; }
   body, html { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif; background: #f7f8fb; }
@@ -141,4 +133,3 @@
   </div>
 </div>
 
-<router-outlet></router-outlet>
